@@ -36,6 +36,12 @@ bzr-0.0.5  NOT RELEASED YET
     * New "stat cache" avoids reading the contents of files if they 
       haven't changed since the previous time.
 
+  
+  BUG FIXES:
+
+    * Fixed diff format so that added and removed files will be
+      handled properly by patch.  Fix from Lalo Martins.
+
 
   TESTING:
 
